updates to theme

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Lonestar Group
-Theme URI:          https://www.eqtr.com/
-Description:        A custom theme for Lonestar Group
+Theme Name:         Sage 10
+Theme URI:          https://roots.io/sage/
+Description:        A custom theme using Sage 10
 Version:            10.8.2
-Author:             Equator Agency
-Author URI:         https://www.eqtr.com/
+Author:             Shannon Middleton
+Author URI:         https://roots.io/sage/
 Text Domain:        sage
 License:            MIT License
 License URI:        https://opensource.org/licenses/MIT
